# SZE-MOSZE-2020-TheThreeVision

./: .gitignore  Damage.h  Damage_8h_source.html  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  README.md  Renderer.h  Renderer_8h_source.html  Report.md  SVGRenderer.cpp  SVGRenderer.h  SVGRenderer_8h_source.html  TextRender.cpp  TextRender.h  TextRender_8h_source.html  TextRenderer.cpp  TextRenderer.h  TextRenderer_8h_source.html  annotated.html  autotoc_md0.html  classAdventurerPlayer-members.html  classAdventurerPlayer.html  classAdventurerPlayer__coll__graph.map  classAdventurerPlayer__coll__graph.md5  classAdventurerPlayer__inherit__graph.map  classAdventurerPlayer__inherit__graph.md5  (+168 more)
Units/: Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Kakarott.json  Maple.json  Sally.json  Zombie.json  preparedgame.txt  unit.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+24 more)
test/: CMakeLists.txt  unit.json  unit2.json  unit_fail.json  unit_test.cpp
(+4 files in other folders)
